# seigyo

./: Cargo.toml  README.md  docs-header.html
examples/: puma.sdf
examples/manipulator/: README.md  config.toml  manipulator.20260202-021501.FCBak  manipulator.FCStd  manipulator.sdf
examples/manipulator/meshes/: link-0.dae  link-1.dae  link-3.dae  link-4.dae  link-5.dae
examples/manipulator/src/: main.rs
src/: lib.rs
