[package]
name = "seigyo"
version = "0.1.0"
edition = "2024"
authors = [ "prateek nanhorya <prateek.n2000@ymail.com>" ]
readme = "README.md"

[dependencies]

[dev-dependencies]
gz = "0.9.0"
log = "0.4.29"

[[example]]
name = "manipulator"
path = "examples/manipulator/src/main.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "docs-header.html"]